# routes/cards.js
@@ -66,37 +66,37 @@ routes.get("/:cardName", (req, res) => {
     });
 });
 
-//Get All cards with user id X
-routes.get("/:userId", (req, res) => {
+// //Get All cards with user id X
+// routes.get("/:userId", (req, res) => {
 
-    /*
-  #swagger.tags = ['User Cards'] 
-  #swagger.summary = Get all cards for current user
-  #swagger.security = [{
-    "JWT": []
-  }]
-  */
+//     /*
+//   #swagger.tags = ['User Cards'] 
+//   #swagger.summary = Get all cards for current user
+//   #swagger.security = [{
+//     "JWT": []
+//   }]
+//   */
 
-  const userId = req.params.userId;
+//   const userId = req.params.userId;
 
-  users.countDocuments({ googleId: userId })
-    .then(function (num) {
-      if (num === 0) {
-        res.status(400).json("Must use a valid userID.");
-      } else {
-        users.find({ googleId: userId })
-        .then((data) => {
-          res.status(200).send(data);
-          console.log(`returned all cards with user Id ${req.params.userId}`);
-        })
-        .catch((err) => {
-          res.status(500).send({
-            message: err.message || 'Some error occurred while retrieving data.'
-          });
-        });
-      }
-    });
-});
+//   users.countDocuments({ googleId: userId })
+//     .then(function (num) {
+//       if (num === 0) {
+//         res.status(400).json("Must use a valid userID.");
+//       } else {
+//         users.find({ googleId: userId })
+//         .then((data) => {
+//           res.status(200).send(data);
+//           console.log(`returned all cards with user Id ${req.params.userId}`);
+//         })
+//         .catch((err) => {
+//           res.status(500).send({
+//             message: err.message || 'Some error occurred while retrieving data.'
+//           });
+//         });
+//       }
+//     });
+// });
 
 //Add new
 routes.post("/", (req, res) => {
